--- a/app/src/main/res/drawable/rounded.xml
+++ b/app/src/main/res/drawable/rounded.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="20dp"/>
-    <solid android:color="@color/secondary"/>
-    <padding android:left="12dp" android:right="12dp" android:top="6dp" android:bottom="6dp"/>
-    <size android:width="150dp" android:height="50dp"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- כאשר הכפתור נלחץ -->
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/background_beige" />
+            <stroke android:width="3dp" android:color="@color/primary" />
+            <corners android:radius="20dp" />
+        </shape>
+    </item>
+
+    <!-- מצב רגיל -->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/background_beige" />
+            <stroke android:width="3dp" android:color="@color/primary" />
+            <corners android:radius="20dp" />
+        </shape>
+    </item>
+</selector>
