--- a/app/src/main/res/layout/fragment_client_home.xml
+++ b/app/src/main/res/layout/fragment_client_home.xml
@@ -18,14 +18,39 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_horizontal">
+            android:gravity="center_vertical">
             <ImageView
                 android:id="@+id/appLogo"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="start"
+                android:layout_marginLeft="0dp"
                 android:contentDescription="App Logo"
                 android:src="@drawable/logo" />
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+            <ImageButton
+                android:id="@+id/profileButton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="end"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="profile"
+                android:src="@drawable/profile_icon" />
+            <ImageButton
+                android:id="@+id/logoutButton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="end"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="Logout"
+                android:onClick="logout"
+                android:src="@drawable/logout" />
+
         </LinearLayout>
+
 
         <!-- User Greeting -->
         <TextView
