--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -42,7 +42,14 @@
         android:id="@+id/clientHomeFragment"
         android:name="com.example.hairqueue.Fragments.ClientHomeFragment"
         android:label="fragment_client_home"
-        tools:layout="@layout/fragment_client_home" />
+        tools:layout="@layout/fragment_client_home" >
+        <action
+            android:id="@+id/action_clientHomeFragment_to_activityProfileFragment"
+            app:destination="@id/activityProfileFragment" />
+        <action
+            android:id="@+id/action_clientHomeFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
     <fragment
         android:id="@+id/scheduleManagement"
         android:name="com.example.hairqueue.Fragments.ScheduleManagement"
@@ -77,4 +84,13 @@
         android:name="com.example.hairqueue.Fragments.occupiedAppointmentsFragment"
         android:label="fragment_occupied_appointments"
         tools:layout="@layout/fragment_occupied_appointments" />
+    <fragment
+        android:id="@+id/activityProfileFragment"
+        android:name="com.example.hairqueue.Fragments.ActivityProfileFragment"
+        android:label="activity_profile"
+        tools:layout="@layout/activity_profile" >
+        <action
+            android:id="@+id/action_activityProfileFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 </navigation>
