--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -44,11 +44,8 @@
         android:label="fragment_client_home"
         tools:layout="@layout/fragment_client_home" >
         <action
-            android:id="@+id/action_clientHomeFragment_to_activityProfileFragment"
-            app:destination="@id/activityProfileFragment" />
-        <action
-            android:id="@+id/action_clientHomeFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            android:id="@+id/action_clientHomeFragment_to_clientDatePickerFragment"
+            app:destination="@id/clientDatePickerFragment" />
     </fragment>
     <fragment
         android:id="@+id/scheduleManagement"
@@ -85,6 +82,20 @@
         android:label="fragment_occupied_appointments"
         tools:layout="@layout/fragment_occupied_appointments" />
     <fragment
+        android:id="@+id/clientDatePickerFragment"
+        android:name="com.example.hairqueue.Fragments.ClientDatePickerFragment"
+        android:label="fragment_client_date_picker"
+        tools:layout="@layout/fragment_client_date_picker" >
+        <action
+            android:id="@+id/action_clientDatePickerFragment_to_clientSetAppointmentFragment"
+            app:destination="@id/clientSetAppointmentFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/clientSetAppointmentFragment"
+        android:name="com.example.hairqueue.Fragments.ClientSetAppointmentFragment"
+        android:label="fragment_client_set_appointment2"
+        tools:layout="@layout/fragment_client_set_appointment" />
+    <fragment
         android:id="@+id/activityProfileFragment"
         android:name="com.example.hairqueue.Fragments.ActivityProfileFragment"
         android:label="activity_profile"
@@ -92,5 +103,4 @@
         <action
             android:id="@+id/action_activityProfileFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
-    </fragment>
 </navigation>
