--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -46,6 +46,12 @@
         <action
             android:id="@+id/action_clientHomeFragment_to_clientDatePickerFragment"
             app:destination="@id/clientDatePickerFragment" />
+        <action
+            android:id="@+id/action_clientHomeFragment_to_activityProfileFragment"
+            app:destination="@id/activityProfileFragment" />
+        <action
+            android:id="@+id/action_clientHomeFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/scheduleManagement"
@@ -103,4 +109,6 @@
         <action
             android:id="@+id/action_activityProfileFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+    </fragment>
+
 </navigation>
