--- a/app/src/main/res/layout/fragment_schedule_management.xml
+++ b/app/src/main/res/layout/fragment_schedule_management.xml
@@ -12,6 +12,15 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <!-- Logo Icon -->
+        <ImageView
+            android:id="@+id/logoIcon"
+            android:layout_width="230dp"
+            android:layout_height="82dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/logo" />
+
         <!-- Calendar in a CardView -->
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
